--- a/index.html
+++ b/index.html
@@ -146,8 +146,7 @@
                     <div class="image-tag" data-i18n="tag_ergonomic">Ergonomic</div>
                 </div>
                 <img src="C:/Users/oleha/.gemini/antigravity/brain/0a8c524d-8ac5-413f-a62e-6ed985b8e505/uploaded_image_1768171005593.png"
-                    alt="Premium Toothbrushes"
-                    style="width: 100%; height: 100%; object-fit: cover; object-position: center;">
+                    alt="Aurora Toothbrush">
             </div>
         </div>
     </section>
@@ -203,7 +202,7 @@
                     <div class="image-tag" data-i18n="tag_minimal">Minimal</div>
                 </div>
                 <img src="C:/Users/oleha/.gemini/antigravity/brain/0a8c524d-8ac5-413f-a62e-6ed985b8e505/uploaded_image_1768173627208.png"
-                    alt="Minimal Series" style="width: 100%; height: 100%; object-fit: cover; object-position: center;">
+                    alt="Minimal Toothbrush">
             </div>
             <div class="showcase-content">
                 <span class="section-badge" data-i18n="showcase_minimal_badge">Collection</span>
