--- a/index.html
+++ b/index.html
@@ -145,8 +145,7 @@
                     <div class="image-tag" data-i18n="tag_premium">Premium</div>
                     <div class="image-tag" data-i18n="tag_ergonomic">Ergonomic</div>
                 </div>
-                <img src="C:/Users/oleha/.gemini/antigravity/brain/0a8c524d-8ac5-413f-a62e-6ed985b8e505/uploaded_image_1768171005593.png"
-                    alt="Aurora Toothbrush">
+                <img src="assets/images/ChatGPT Image 12 січ. 2026 р., 00_36_08.png" alt="Aurora Toothbrush">
             </div>
         </div>
     </section>
@@ -201,8 +200,7 @@
                     <div class="image-tag" data-i18n="tag_eco">Eco</div>
                     <div class="image-tag" data-i18n="tag_minimal">Minimal</div>
                 </div>
-                <img src="C:/Users/oleha/.gemini/antigravity/brain/0a8c524d-8ac5-413f-a62e-6ed985b8e505/uploaded_image_1768173627208.png"
-                    alt="Minimal Toothbrush">
+                <img src="assets/images/ChatGPT Image 12 січ. 2026 р., 01_12_36.png" alt="Minimal Toothbrush">
             </div>
             <div class="showcase-content">
                 <span class="section-badge" data-i18n="showcase_minimal_badge">Collection</span>
