--- a/index.html
+++ b/index.html
@@ -108,6 +108,107 @@
     </section>
 
     <section class="showcase" id="showcase">
+        <div class="marquee-wrapper decoration aurora">
+            <div class="marquee-content">
+                <span data-i18n="marquee_text_1">Aurora Collection</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_1">Aurora Collection</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_1">Aurora Collection</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_1">Aurora Collection</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_1">Aurora Collection</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_1">Aurora Collection</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_1">Aurora Collection</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_1">Aurora Collection</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <!-- Duplicated for seamless loop -->
+                <span data-i18n="marquee_text_1">Aurora Collection</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_1">Aurora Collection</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_1">Aurora Collection</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_1">Aurora Collection</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_1">Aurora Collection</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_1">Aurora Collection</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_1">Aurora Collection</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_1">Aurora Collection</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+            </div>
+        </div>
         <div class="showcase-grid">
             <div class="showcase-content">
                 <span class="section-badge" data-i18n="showcase_aurora_badge">Collection</span>
@@ -150,50 +251,109 @@
         </div>
     </section>
 
-    <div class="marquee-wrapper">
-        <div class="marquee-content">
-            <span data-i18n="marquee_text_1">Aurora Collection</span>
-            <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
-                    fill="currentColor" />
-            </svg>
-            <span data-i18n="marquee_text_1">Aurora Collection</span>
-            <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
-                    fill="currentColor" />
-            </svg>
-            <span data-i18n="marquee_text_1">Aurora Collection</span>
-            <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
-                    fill="currentColor" />
-            </svg>
-            <!-- Duplicated for seamless loop -->
-            <span data-i18n="marquee_text_1">Aurora Collection</span>
-            <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
-                    fill="currentColor" />
-            </svg>
-            <span data-i18n="marquee_text_1">Aurora Collection</span>
-            <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path
-                    d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
-                    fill="currentColor" />
-            </svg>
-            <span data-i18n="marquee_text_1">Aurora Collection</span>
-            <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
-                    fill="currentColor" />
-            </svg>
-        </div>
-    </div>
 
     <section class="showcase">
+        <div class="marquee-wrapper decoration minimal">
+            <div class="marquee-content">
+                <span data-i18n="marquee_text_2">Minimal Series</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_2">Minimal Series</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_2">Minimal Series</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_2">Minimal Series</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_2">Minimal Series</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_2">Minimal Series</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_2">Minimal Series</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_2">Minimal Series</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <!-- Duplicated for seamless loop -->
+                <span data-i18n="marquee_text_2">Minimal Series</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_2">Minimal Series</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_2">Minimal Series</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_2">Minimal Series</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_2">Minimal Series</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_2">Minimal Series</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_2">Minimal Series</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+                <span data-i18n="marquee_text_2">Minimal Series</span>
+                <svg class="marquee-star" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 3L13.045 7.455L17.5 8.5L13.045 9.545L12 14L10.955 9.545L6.5 8.5L10.955 7.455L12 3Z"
+                        fill="currentColor" />
+                </svg>
+            </div>
+        </div>
         <div class="showcase-grid">
             <div class="showcase-image">
                 <div class="tags-container" data-tags-group="minimal">
