--- a/index.html
+++ b/index.html
@@ -457,6 +457,61 @@
         </div>
     </section>
 
+    <section class="gallery" id="gallery">
+        <div style="text-align: center; margin-bottom: 60px;">
+            <span class="section-badge" data-i18n="gallery_badge">Gallery</span>
+            <h2 class="section-title"><span data-i18n="gallery_title_1">Visual</span> <span class="gradient-text"
+                    data-i18n="gallery_title_2">Experience</span></h2>
+        </div>
+        <div class="gallery-carousel">
+            <div class="gallery-track">
+                <div class="gallery-item">
+                    <div class="tags-container">
+                        <div class="image-tag" data-i18n="tag_premium">Premium</div>
+                        <div class="image-tag" data-i18n="tag_quality">Quality</div>
+                    </div>
+                    <img src="assets/images/tony-litvyak-glPVwPr1FKo-unsplash.jpg" alt="Premium Design">
+                </div>
+                <div class="gallery-item">
+                    <div class="tags-container">
+                        <div class="image-tag" data-i18n="tag_tech">Tech</div>
+                        <div class="image-tag" data-i18n="tag_ergonomic">Ergonomic</div>
+                    </div>
+                    <img src="assets/images/nataliya-melnychuk-3U-LoTdvVu8-unsplash.jpg" alt="Advanced Tech">
+                </div>
+                <div class="gallery-item">
+                    <div class="tags-container">
+                        <div class="image-tag" data-i18n="tag_quality">Quality</div>
+                        <div class="image-tag" data-i18n="tag_minimal">Minimal</div>
+                    </div>
+                    <img src="assets/images/madison-oren-uGP_6CAD-14-unsplash.jpg" alt="Daily Care">
+                </div>
+                <div class="gallery-item">
+                    <div class="tags-container">
+                        <div class="image-tag" data-i18n="tag_eco">Eco</div>
+                        <div class="image-tag" data-i18n="tag_premium">Premium</div>
+                    </div>
+                    <img src="assets/images/kamal-hoseinianzade-SjybLeQF6QY-unsplash.jpg" alt="Eco Friendly">
+                </div>
+                <div class="gallery-item">
+                    <div class="tags-container">
+                        <div class="image-tag" data-i18n="tag_minimal">Minimal</div>
+                        <div class="image-tag" data-i18n="tag_tech">Tech</div>
+                    </div>
+                    <img src="assets/images/diana-polekhina-iYQgnaWD8uw-unsplash.jpg" alt="Minimalist Style">
+                </div>
+                <div class="gallery-item">
+                    <div class="tags-container">
+                        <div class="image-tag" data-i18n="tag_ergonomic">Ergonomic</div>
+                        <div class="image-tag" data-i18n="tag_quality">Quality</div>
+                    </div>
+                    <img src="assets/images/candid-WFsNCIn8OF4-unsplash.jpg" alt="Modern Hygiene">
+                </div>
+            </div>
+        </div>
+        <div class="gallery-pagination"></div>
+    </section>
+
     <footer>
         <p data-i18n="footer_copy">© 2024 BRUSHĒ. All rights reserved. Created with love for design and health.</p>
     </footer>
