--- a/index.html
+++ b/index.html
@@ -605,6 +605,38 @@
                     </div>
                     <img src="assets/images/candid-WFsNCIn8OF4-unsplash.jpg" alt="Modern Hygiene">
                 </div>
+                <div class="gallery-item">
+                    <div class="tags-container">
+                        <div class="image-tag" data-i18n="tag_premium">Premium</div>
+                        <div class="image-tag" data-i18n="tag_eco">Eco</div>
+                    </div>
+                    <img src="https://images.unsplash.com/photo-1607613009820-a29f7bb81c04?auto=format&fit=crop&q=80&w=800"
+                        alt="Natural Care">
+                </div>
+                <div class="gallery-item">
+                    <div class="tags-container">
+                        <div class="image-tag" data-i18n="tag_tech">Tech</div>
+                        <div class="image-tag" data-i18n="tag_quality">Quality</div>
+                    </div>
+                    <img src="https://images.unsplash.com/photo-1598256989800-fe5f95da9787?auto=format&fit=crop&q=80&w=800"
+                        alt="Innovation">
+                </div>
+                <div class="gallery-item">
+                    <div class="tags-container">
+                        <div class="image-tag" data-i18n="tag_minimal">Minimal</div>
+                        <div class="image-tag" data-i18n="tag_premium">Premium</div>
+                    </div>
+                    <img src="https://images.unsplash.com/photo-1556228578-8c89e6adf883?auto=format&fit=crop&q=80&w=800"
+                        alt="Clean Design">
+                </div>
+                <div class="gallery-item">
+                    <div class="tags-container">
+                        <div class="image-tag" data-i18n="tag_eco">Eco</div>
+                        <div class="image-tag" data-i18n="tag_ergonomic">Ergonomic</div>
+                    </div>
+                    <img src="https://images.unsplash.com/photo-1609683759035-f9a17c7b940e?auto=format&fit=crop&q=80&w=800"
+                        alt="Sustainable">
+                </div>
             </div>
         </div>
         <div class="gallery-pagination"></div>
