--- a/index.html
+++ b/index.html
@@ -529,7 +529,9 @@
     </section>
 
     <section class="stats" id="stats">
-        <div class="stats-bg-image">🪥</div>
+        <div class="stats-bg-image">
+            <img src="assets/images/Brush.png" alt="Background Brush">
+        </div>
         <div style="text-align: center; margin-bottom: 80px;">
             <span class="section-badge" data-i18n="stats_badge">Stats</span>
             <h2 class="section-title" style="margin-bottom: 0;"><span data-i18n="stats_title_1">Our</span> <span
